log
Tue, May 13, 2025 12:35:29 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Tue, May 13, 2025 12:36:01 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b285ada
Tue, May 13, 2025 12:37:05 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d530260
Tue, May 13, 2025 12:37:47 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
7e7596a
Tue, May 13, 2025 12:38:14 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8b5b71e
Tue, May 13, 2025 12:39:01 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c6ed1b7
Tue, May 13, 2025 12:39:59 PM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
35d914e
Tue, May 13, 2025 12:40:21 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
32839ab
Tue, May 13, 2025 12:44:02 PM: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
fba483e
Tue, May 13, 2025 12:45:13 PM: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
477af70
Tue, May 13, 2025 12:47:36 PM: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
2995daa
Tue, May 13, 2025 12:49:50 PM: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
ee92dd7
Tue, May 13, 2025  1:04:37 PM: 
 sudoku.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
83a984c
Sun 18 May 2025 04:27:07 PM UTC: 
 tests:  0|5
total_score: 0/70
b9ad4ec
Sun 18 May 2025 04:28:05 PM UTC: 
 sudoku.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
b94d78e
Sun 18 May 2025 04:28:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
39b38ea
Sun 18 May 2025 04:30:02 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
e786afc
Sun 18 May 2025 04:48:40 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:72:52: error: expected ‘]’ before ‘)’ token
   72 |                         if (test[n->sudo[i][j] == 1)
      |                                                    ^
      |                                                    ]
sudoku.c:75:43: error: expected ‘]’ before ‘;’ token
   75 |                     test[n->sudo[i][j] = 1;
      |                                           ^
      |                                           ]
sudoku.c:75:25: error: value computed is not used [-Werror=unused-value]
   75 |                     test[n->sudo[i][j] = 1;
      |                     ~~~~^~~~~~~~~~~~~~~~~~~
   76 |         }
      |         ~                
sudoku.c:75:44: error: expected ‘;’ before ‘}’ token
   75 |                     test[n->sudo[i][j] = 1;
      |                                            ^
      |                                            ;
   76 |         }
      |         ~                                   
cc1: all warnings being treated as errors
4dcf3e4
